[package]
name = "dimsafe"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[dependencies]
log = "0.4"
console_log = "0.2"
wasm-bindgen = "0.2.100"
serde = "1.0"
serde_json = "1.0"

leptos = { version = "0.8", features = ["csr", "ssr"] }
leptos_meta = { version = "0.8" }
leptos_dom = { version = "0.8" }
leptos-use = { version = "0.16", features = ["storage"] }

web-sys = { version = "0.3.77", features = [
    "Window", "Document", "HtmlCanvasElement", 
    "Performance",
    "WheelEvent","MouseEvent",
    "HtmlImageElement", "ImageData",
    "Selection", "Range"
    ] }
console_error_panic_hook = "0.1.7"
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
logos = "0.14.2"
lazy_static = "1.5"

nalgebra = "0.34"

[build-dependencies]
lalrpop = "0.22.2"
logos = "0.14.2"

[lib]
crate-type = ["cdylib"]

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"